net_buffer: Fixed clang warning.

* This closes ticket #12825.